--- a/QLKSver2.0/QLKSver2.0/bin/x64/Debug/QLKS.vshost.exe.config
+++ b/QLKSver2.0/QLKSver2.0/bin/x64/Debug/QLKS.vshost.exe.config
@@ -3,6 +3,6 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="QLKS.Properties.Settings.QLTPConnectionString" connectionString="Data Source=ALBERT\SQLEXPRESS;Initial Catalog=QLTP;Integrated Security=True" providerName="System.Data.SqlClient"/>
+        <add name="QLKS.Properties.Settings.QLTPConnectionString" connectionString="Data Source=.;Initial Catalog=QLTP;Integrated Security=True" providerName="System.Data.SqlClient"/>
     </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
